# meow

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README  README.txt  TODO.txt  flake.nix
cmake/: tigcc_override.cmake  toolchain.cmake
doc/: README
lib/: CMakeLists.txt  README  TODO
lib/doc/: Doxyfile
lib/include/meow/: macros.h  map.h  menu.h  player.h  test_tileset.h
lib/src/: map.c  menu.c
nix/pkgs/broken/: tilp.nix
nix/pkgs/tiLibraries/: INFO.txt  default.nix  libticables2.nix  libticalcs2.nix  libticonv.nix  libtifiles2.nix  libusb.nix
nix/pkgs/tiTools/: INFO.txt  default.nix  gcc4ti.nix  texinfo4.nix  tigcc-bin.nix
nix/pkgs/tiTools/tiemu/: INFO.txt  tiemu.nix
src/: CMakeLists.txt  macros.h  main.c  menu.c  menu.h  player.h
tools/: tiler.py
